Minimal VM is broken after JDK-8212160

XMLWordPrintable

    • b27

        * For target hotspot_variant-minimal_libjvm_objs_instanceKlass.o:
        In file included from /home/fool/workspace/jdk/src/hotspot/share/utilities/compilerWarnings.hpp:30:0,
                         from /home/fool/workspace/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:28,
                         from /home/fool/workspace/jdk/src/hotspot/share/memory/allocation.hpp:28,
                         from /home/fool/workspace/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
                         from /home/fool/workspace/jdk/src/hotspot/share/precompiled/precompiled.hpp:34,
                         from /home/fool/workspace/jdk/src/hotspot/share/oops/instanceKlass.cpp:25:
        /home/fool/workspace/jdk/src/hotspot/share/prims/jvmtiImpl.hpp: In member function 'void JvmtiDeferredEventQueue::post(JvmtiEnv*)':
        /home/fool/workspace/jdk/src/hotspot/share/prims/jvmtiImpl.hpp:523:46: error: return-statement with a value, in function returning 'void' [-fpermissive]
           void post(JvmtiEnv* env) NOT_JVMTI_RETURN_(false);
                                                      ^
        /home/fool/workspace/jdk/src/hotspot/share/utilities/macros.hpp:65:42: note: in definition of macro 'NOT_JVMTI_RETURN_'
         #define NOT_JVMTI_RETURN_(code) { return code; }
                                                  ^~~~

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: