8235456: Minimal VM is broken after JDK-8212160

Reviewed-by: dholmes